crates/component-tui/tests/snapshots/snapshot__search_view_empty_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
┌ Search ──────────────────────────────────────────────────────────────────────┐
│Press / to search...                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
            No known packages. Pull a package to add it to the list.










 /  Search   p  Pull selected   r  Refresh tags   Enter  View details   Esc  Cle
