crates/component-tui/tests/snapshots/snapshot__settings_view_loading_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
Loading state information...
