crates/component-tui/tests/snapshots/snapshot__settings_view_with_state_info_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
Migrations
  Current:  3/3

Configuration
  Global config: /home/user/.config/wasm/config.toml (not created)
  Local config:  .config/wasm/config.toml (not found)


Storage
Executable       /usr/local/bin/wasm                            -
Data storage     /home/user/.local/share/wasm                   -
Content store    /home/user/.local/share/wasm/store             10.00 MB
Image metadata   /home/user/.local/share/wasm/db/metadata.db3   64.00 KB
