crates/component-tui/tests/snapshots/snapshot__tab_bar_error_state_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
┌ Test App - error occurred! ──────────────────────────────┐
│ First [1] │ Second [2] │ Third [3]                       │
└──────────────────────────────────────────────────────────┘
