crates/component-tui/tests/snapshots/snapshot__tab_bar_third_selected_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
┌ Test App - ready ────────────────────────────────────────┐
│ First [1] │ Second [2] │ Third [3]                       │
└──────────────────────────────────────────────────────────┘
