crates/component-tui/tests/snapshots/snapshot__types_view_populated_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
   Package                          Version             Component

 ▶ wasi:http                        0.2.0               ghcr.io/example/http-proxy:v1.0.0
   wasi:cli                         0.2.0               ghcr.io/example/cli-tool:latest










 ↑/↓ navigate │ Enter view WIT │ q quit
