crates/component-tui/tests/snapshots/snapshot__types_view_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
                  No WIT interfaces found.

  Pull a WebAssembly component to see its interfaces here.
 Press [2] to go to Components, then [p] to pull a package.
